:art: Modification de l'emplacement du fichier de properties